--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Connect Four</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="index.js" charset="UTF-8"></script>
+    <script src="index2.js" charset="UTF-8"></script>
 </head>
 <body>
-    <h3>The current Player is: Player<span id="current-player ">1</span></h3>
+    <h3>The current Player is: Player<span id="current-player">1</span></h3>
     <h3 id = result></h3>
 
     <div class="grid">
